# NeuronRT

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  DecouplingAudit.cmake
configs/: chip_default.json  energy_table_28nm.json
configs/traffic/: hotspot_center.json  neighbor_xy.json  tree_sync_only.json  uniform_random.json
frontend/: README.md  profile_dnp_placement.py  run_dnp_accuracy.py  run_dnp_perlayer.py  run_dnp_placement_e2e.py  run_dnp_placement_test.py  run_dnp_sweep.py  run_dnp_temporal.py  run_dvs_accuracy.py  run_dvs_dnp.py  run_dvs_dnp_sim.py  run_e2e.py  run_tests.py  train_dvs_sewresnet.py  train_svgg9_cifar10.py  validate_arch.py  validate_svgg9.py
frontend/neurort_compiler/: __init__.py  cli.py  format.md  funcsim.py
frontend/neurort_compiler/export/: schema.py  writer.py
frontend/neurort_compiler/graph/: builders.py  dag.py
frontend/neurort_compiler/mapping/: dag_route.py  firing_placement.py  partition.py
frontend/neurort_compiler/models/: __init__.py  dsnn.py  registry.py  spikformer.py  svgg.py
frontend/neurort_compiler/synapse/: compress.py  connect.py  decompress.py  dendrite.py
sim/: CMakeLists.txt
sim/app/: main.cpp
sim/include/neurort/common/: config.hpp  log.hpp  ports.hpp  types.hpp
sim/include/neurort/energy/: energy_model.hpp  energy_table.hpp
sim/include/neurort/engine/: engine.hpp  network_runner.hpp
sim/include/neurort/functional/: attention_unit.hpp  axon_out.hpp  credit.hpp  dendrite.hpp  dnp.hpp  flit.hpp  lif.hpp  mesh.hpp  network_pe.hpp  pe_receiver.hpp  pe_stub.hpp  router.hpp  routing.hpp  soma.hpp  sync_fsm.hpp  tickable.hpp  traffic.hpp  tree_topology.hpp
sim/include/neurort/network/: network_image.hpp
sim/include/neurort/stats/: action.hpp  stats.hpp  thread_stats.hpp
sim/src/common/: config.cpp
sim/src/energy/: energy_table.cpp
sim/src/engine/: engine.cpp  network_runner.cpp
sim/src/functional/: dendrite.cpp  dnp.cpp  flit.cpp  mesh.cpp  network_pe.cpp  pe_stub.cpp  router.cpp  sync_fsm.cpp
sim/src/network/: network_image.cpp
sim/src/stats/: action.cpp
